--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </head>
   <body>
     <header>
-      <nav>
+      <nav class="fix">
         <div class="container flex-container">
-          <img src="images/mart.png" alt="logo" class="logo" />
+          <a href="/"><img src="images/mart.png" alt="Logo" class="logo"/></a>
           <ul class="main-list">
             <li class="list"><a href="/">Home</a></li>
             <li class="list"><a href="/">About us</a></li>
@@ -30,9 +30,9 @@
     </header>
 
     <main>
-      <section>
+      <section class="fix">
         <div class="container">
-          <h1 class="title-first-section">Featured Products</h1>
+          <h2 class="title-first-section">Featured Products</h2>
           <ul class="things-list">
             <li class="things">
               <a href="/" class="link">
@@ -134,12 +134,17 @@
         </div>
       </section>
 
-      <section>
+      <section class="fix last">
         <div class="container">
           <h2 class="title-second-section">Latest News</h2>
           <ul class="thing-list-second">
             <li class="news">
-              <img src="images/news-1.png" alt="ipad" width="348" />
+              <img
+                src="images/news-1.png"
+                alt="ipad"
+                width="348"
+                class="news-images"
+              />
               <h3 class="news-title">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Accusamus, eum.
@@ -149,10 +154,15 @@
                 Facilis modi magni officiis ratione beatae officia corporis,
                 mollitia explicabo non consectetur?
               </p>
-              <button class="news-button">Read More</button>
+              <a href="/" class="button">Read More</a>
             </li>
             <li class="news">
-              <img src="images/news-2.png" alt="slide" width="348" />
+              <img
+                src="images/news-2.png"
+                alt="slide"
+                width="348"
+                class="news-images"
+              />
               <h3 class="news-title">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Accusamus, eum.
@@ -162,10 +172,15 @@
                 Facilis modi magni officiis ratione beatae officia corporis,
                 mollitia explicabo non consectetur?
               </p>
-              <button class="news-button">Read More</button>
+              <a href="/" class="button">Read More</a>
             </li>
             <li class="news">
-              <img src="images/news-3.png" alt="product" width="348" />
+              <img
+                src="images/news-3.png"
+                alt="product"
+                width="348"
+                class="news-images"
+              />
               <h3 class="news-title">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Accusamus, eum.
@@ -175,7 +190,7 @@
                 Facilis modi magni officiis ratione beatae officia corporis,
                 mollitia explicabo non consectetur?
               </p>
-              <button class="news-button">Read More</button>
+              <a href="/" class="button">Read More</a>
             </li>
           </ul>
         </div>
