--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
+    <header class="nav-header">
       <nav class="fix">
         <div class="container flex-container">
           <a href="/"><img src="images/mart.png" alt="Logo" class="logo"/></a>
@@ -31,8 +31,8 @@
 
     <main>
       <section class="fix">
-        <div class="container">
-          <h2 class="title-first-section">Featured Products</h2>
+        <div class="container first">
+          <h2 class="title">Featured Products</h2>
           <ul class="things-list">
             <li class="things">
               <a href="/" class="link">
@@ -136,7 +136,7 @@
 
       <section class="fix last">
         <div class="container">
-          <h2 class="title-second-section">Latest News</h2>
+          <h2 class="title">Latest News</h2>
           <ul class="thing-list-second">
             <li class="news">
               <img
