--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <main>
       <section class="fix">
-        <div class="container first">
+        <div class="container section-first">
           <h2 class="title">Featured Products</h2>
           <ul class="things-list">
             <li class="things">
